<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/detail_header">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="182dp"
            android:layout_height="268dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cover_image"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_loading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="start"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/text_year_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start"
            android:text="@string/year"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_year_name"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:text="@string/dummyYear" />

        <TextView
            android:id="@+id/text_rating_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start"
            android:text="@string/rating"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_year_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_rating_name"
            app:layout_constraintTop_toBottomOf="@+id/text_year_name" />

        <TextView
            android:id="@+id/text_genre_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start"
            android:text="@string/genre"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_rating_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_genre_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_genre_name"
            app:layout_constraintTop_toBottomOf="@+id/text_genre_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/dummyName" />

        <TextView
            android:id="@+id/text_stars_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="start"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/text_genre_list"
            app:layout_constraintVertical_bias="0.0"
            android:text="@string/stars" />

        <TextView
            android:id="@+id/text_stars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title"
            app:layout_constraintHorizontal_bias="0.0"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/text_stars_name"
            app:layout_constraintTop_toBottomOf="@+id/text_stars_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/dummyName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_storyline_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/storyline"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_header" />


    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/text_storyline_name" />

    <TextView
        android:id="@+id/text_storyline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        tools:text="@string/storyline" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>