<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home"
    tools:context=".ui.home.HomeActivity"
    android:theme="@style/Theme.MoviesListJetpack">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@color/colorTextTertiary"
        app:tabSelectedTextColor="@android:color/white"
        app:tabIndicatorColor="@android:color/holo_orange_light"
        app:tabGravity="fill"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>